// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Front component update via manifest sync should fail for path traversal when builtComponentPath is a folder path without extension (bare UUID) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Filename must have an extension",
              "userFriendlyMessage": "Built component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when builtComponentPath is updated with a completely unrelated extension (.pdf) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Invalid file extension. Allowed extensions: .mjs",
              "userFriendlyMessage": "Built component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when builtComponentPath is updated with absolute path via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Resource path must be relative, not absolute",
              "userFriendlyMessage": "Built component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when builtComponentPath is updated with backslash path via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Resource path must not contain backslashes",
              "userFriendlyMessage": "Built component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when builtComponentPath is updated with invalid extension (.js instead of .mjs) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Invalid file extension. Allowed extensions: .mjs",
              "userFriendlyMessage": "Built component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when builtComponentPath is updated with path traversal via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Resource path must not contain path traversal (..)",
              "userFriendlyMessage": "Built component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when sourceComponentPath is a folder path without extension 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Filename must have an extension",
              "userFriendlyMessage": "Source component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when sourceComponentPath is updated with invalid extension (.mjs instead of .ts/.tsx) 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Invalid file extension. Allowed extensions: .ts, .tsx, .json",
              "userFriendlyMessage": "Source component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Front component update via manifest sync should fail for path traversal when sourceComponentPath is updated with path traversal via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "frontComponent": [
        {
          "errors": [
            {
              "code": "INVALID_FRONT_COMPONENT_INPUT",
              "message": "Resource path must not contain path traversal (..)",
              "userFriendlyMessage": "Source component path is invalid",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "frontComponent",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 frontComponent",
    "summary": {
      "frontComponent": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source component path is invalid",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
